# polymarket_1x2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md  config.yaml  start_codex.sh
.superpowers/sdd/: task-6-report.md
docs/superpowers/plans/: 2026-06-25-rs-clob-client-v2.md  2026-06-26-oddsportal-js-odds-logging.md  2026-06-26-reorganize-polymarket-layout.md  2026-06-27-configure-trade-and-concurrent-provider-logging.md  2026-06-27-deployment-scripts.md  2026-06-27-live-trading-policy.md  2026-06-27-polymarket-live-trading.md  2026-06-27-polymarket-order-dry-run.md  2026-06-27-task-completion-git-workflow.md  2026-06-28-discover-match-by-team-names.md  2026-06-28-switch-target-to-jordan-argentina.md  2026-06-29-harden-oddsportal-runtime.md  2026-06-30-timestamped-diagnostics-and-odds-semantics.md  2026-07-01-oddsportal-in-play-only.md
docs/superpowers/reports/: 2026-06-25-rs-clob-client-v2-verify.md  2026-06-26-reorganize-polymarket-layout-verify.md  2026-06-27-add-polymarket-live-trading-verify.md  2026-06-27-oddsportal-js-odds-logging-verify.md  2026-06-27-polymarket-order-dry-run-verify.md  2026-06-27-remove-live-trading-prohibition-verify.md  2026-06-28-configure-trade-and-concurrent-provider-logging-verify.md  2026-06-28-discover-match-by-team-names-verify.md  2026-06-29-update-proxy-address-verify.md  (+3 more)
scripts/: build.sh  start.sh  stop.sh
src/: clob.rs  config.rs  diagnostics.rs  discovery.rs  logging.rs  main.rs  models.rs  quotes.rs  ws.rs
src/oddsportal/: config.rs  decoder.rs  discovery.rs  logging.rs  mod.rs  models.rs  odds.rs  output.rs  score.rs
src/polymarket/: clob.rs  config.rs  discovery.rs  live.rs  logging.rs  mod.rs  models.rs  order.rs  output.rs  quotes.rs  sports.rs  ws.rs
tests/: deployment_scripts.sh
(+123 files in other folders)
